--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   auto_route: ^7.8.4
   webview_flutter: ^4.4.2
   shared_preferences: ^2.2.2
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
