--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1015487595910:ios:aa4da6cffc3b2cb9e35807",
-  "FIREBASE_PROJECT_ID": "generate-photo-1",
-  "GCM_SENDER_ID": "1015487595910"
+  "GOOGLE_APP_ID": "1:1096080484530:ios:6c1446bf3a1109219401ab",
+  "FIREBASE_PROJECT_ID": "aiphoto1-d11e4",
+  "GCM_SENDER_ID": "1096080484530"
 }
