--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.3.0
   google_sign_in: ^6.1.6
   firebase_core: ^2.22.0
+  cloud_firestore: ^4.13.6
   auto_route: ^7.8.4
   webview_flutter: ^4.4.2
   shared_preferences: ^2.2.2
