--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1015487595910-mfm9aodp28tflfvhjrut47jj6ouni32u.apps.googleusercontent.com</string>
+	<string>1096080484530-gkesjbltgbl1m7kfa2rgam69sjvl459l.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1015487595910-mfm9aodp28tflfvhjrut47jj6ouni32u</string>
+	<string>com.googleusercontent.apps.1096080484530-gkesjbltgbl1m7kfa2rgam69sjvl459l</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBg4HktumfAorS6yh5RdKSvJAy0UU46hmE</string>
+	<string>AIzaSyCc-7Fg5HE_2onG3dwu_1J_CyiCmZyne1Y</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1015487595910</string>
+	<string>1096080484530</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.aiPhoto1</string>
 	<key>PROJECT_ID</key>
-	<string>generate-photo-1</string>
+	<string>aiphoto1-d11e4</string>
 	<key>STORAGE_BUCKET</key>
-	<string>generate-photo-1.appspot.com</string>
+	<string>aiphoto1-d11e4.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1015487595910:ios:aa4da6cffc3b2cb9e35807</string>
+	<string>1:1096080484530:ios:6c1446bf3a1109219401ab</string>
 </dict>
 </plist>
