--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   share_plus: ^7.2.1
   gallery_saver: ^2.3.2
+  apphud: ^2.3.2
   
 
 dev_dependencies:
